deploy/local/k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: users
  namespace: clouding-lab
spec:
  selector:
    app: users
  ports:
    - port: 3001
      targetPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: orders
  namespace: clouding-lab
spec:
  selector:
    app: orders
  ports:
    - port: 3002
      targetPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: catalog
  namespace: clouding-lab
spec:
  selector:
    app: catalog
  ports:
    - port: 3003
      targetPort: 3003
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: clouding-lab
spec:
  selector:
    app: frontend
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
